--- a/web_client/templates/layout/layout.pug
+++ b/web_client/templates/layout/layout.pug
@@ -2,9 +2,10 @@
 
 #g-app-body-container.s-full-page-body
 
-p.footer &copy; Imaging and Visualization Group, ABCS - 2019
+p.footer &copy; Imaging and Visualization Group, ABCS - #{footer}
 
 #Loading.modal
 	.loadingIcon
 		i.fa.icon-spin3.animate-spin
 #g-dialog-container.modal.fade(tabindex="-1")
+#g-alerts-container
