--- a/web_client/templates/layout/panelContentLayout.pug
+++ b/web_client/templates/layout/panelContentLayout.pug
@@ -1,3 +1,5 @@
+#s-full-page-body-Welcome(style='display:none')
+
 #s-full-page-body-View(style='display:none')
 
 #s-full-page-body-Link(style='display:none')
