--- a/web_client/templates/workflow/workflow.pug
+++ b/web_client/templates/workflow/workflow.pug
@@ -1,10 +1,10 @@
-.col-md-2.analysesNames
+.g-analyses-nav-container
 
   //- .analysesHeaders
   //- .analysesTask
-.col-md-4.analyses
+.analyses-body
 
-.col-md-8
-  .col-md-4.analysisControl.s-panel-group(style='height: 80vh;overflow-y: auto;')
-  .col-md-8.Processing(style='height: 80vh;overflow-y: auto;')
-.col-md-2.Visualization
+  .col-md-10.progressPanel
+    .col-md-4.analysisControl.s-panel-group
+    .col-md-8.Processing
+  .col-md-2.Visualization
