--- a/web_client/templates/workflow/workflowNav.pug
+++ b/web_client/templates/workflow/workflowNav.pug
@@ -13,4 +13,6 @@
             //- i.icon-right-dir
         .analysesTag.collapse(id = taskContentId,g-name=navItem, g-tag=tags[index])
 
+.s-nav-siderBar
+  span.hideBar
 .g-global-nav-fade
