--- a/web_client/stylesheets/layout/nav.styl
+++ b/web_client/stylesheets/layout/nav.styl
@@ -1,10 +1,10 @@
+#s-full-page-body-Welcome,
 #s-full-page-body-Link,
 #s-full-page-body-View,
 #s-full-page-body-Analysis,
 #s-full-page-body-History
   top 52px
   position relative
-
 #Link,
 #View,
 #Analysis,
