--- a/web_client/stylesheets/workflow/workflow.styl
+++ b/web_client/stylesheets/workflow/workflow.styl
@@ -32,6 +32,14 @@
             >li
                 pointer-events auto  
 
+.g-analyses-nav-container
+    width 40vw
+    height calc(100vh - 52px)
+    display inline-block
+    transition 1s
+    position absolute
+    left 0vw
+    margin-left 0vw
 .taskNavPanel.panel
     margin-bottom 0px 
     background-color rgba(0,0,0,0)
@@ -39,3 +47,25 @@
     border-radius 0px
     box-shadow 0 1px 1px rgba(0,0,0,.05) 
     list-style none
+.taskNavPanel.panel:hover
+    background-color #f6f6f6
+    transition all 0.2s
+    
+.analyses-body
+    width 60vw
+    float right
+    height calc(100vh - 52px)
+    transition 1s
+.analysisControl,.Processing
+    height 100%
+    overflow-y auto
+    
+.progressPanel
+    height 100%
+    padding-left 0px
+    
+.analysesTag
+    margin-left 30px
+    margin-right 10px
+    overflow auto
+    max-height 300px
