--- a/web_client/templates/layout/header.pug
+++ b/web_client/templates/layout/header.pug
@@ -1,7 +1,8 @@
 nav.navbar.navbar-default(style='height:52px; box-shadow: 0 4px 10px 0 rgba(0, 0, 0, 0.1), 0 1px 6px 0 rgba(0, 0, 0, 0.1);')
   .container-fluid
     .navbar-header
-      a#s-navbar-brand.navbar-brand SSR Platform
+      a#s-navbar-brand.navbar-brand SSR
+        span#version Alpha0.0.1
     .s-nav-wrapper
       //- .nav.navbar-nav
       //-   li
