--- a/web_client/templates/widgets/folderList.pug
+++ b/web_client/templates/widgets/folderList.pug
@@ -17,19 +17,20 @@ ul.g-folder-list
       .g-folder-link
         if folder.get('segmentation')
           if folder.get('segmentation').length
-            --console.log(folder.get('segmentation'))
+            //- --console.log('folder.get("segmentation")')
+            //- --console.log(folder.get('segmentation'))
             if admin
               i.icon-link.dropdown-toggle(data-toggle="dropdown", style='cursor:pointer')
               .g-link-count #{folder.get('segmentation').length}
               ul.dropdown-menu(aria-labelledby="linkMenu" style='top: auto; left: auto;')
                 for segmentationLink in folder.get('segmentation')
-                  i.icon-cancel(style='color:red', folder-id=segmentationLink._id)
+                  i.icon-cancel(style='color:red;cursor:pointer', folder-id=segmentationLink._id)
                   span.dropdown-item #{segmentationLink.name}
             else
               - var segmentation_hasAccess = []
               //- check access for each segmentation with current user id and his groups
               each segmentation in folder.get('segmentation')
-                --console.log(folder.get('segmentation'))
+                --console.log(segmentation)
                 //- --console.log(currentUserGroups)
                 //- --console.log(currentUserId)
                 - var segmentation_userIds = segmentation.access.users.map(x=>x.id)
@@ -43,13 +44,15 @@ ul.g-folder-list
                 // --console.log(user_allAccessIds.some(exist))
                 if (user_allAccessIds.some(exist))
                   -segmentation_hasAccess.push(segmentation)
+              // --console.log('segmentation_hasAccess')
               // --console.log(segmentation_hasAccess)
+             
               if segmentation_hasAccess.length
                 i.icon-link.dropdown-toggle(data-toggle="dropdown", style='cursor:pointer')
                 .g-link-count #{segmentation_hasAccess.length}
                 ul.dropdown-menu(aria-labelledby="linkMenu" style='top: auto; left: auto;')
-                  for segmentationLink in segmentation_hasAccess.get('segmentation')
-                    i.icon-cancel(style='color:red', folder-id=segmentationLink._id)
+                  for segmentationLink in segmentation_hasAccess
+                    //- i.icon-cancel(style='color:red', folder-id=segmentationLink._id)
                     span.dropdown-item #{segmentationLink.name}
 
   if hasMore
