move link to apps and re-arrange layout& add link collection for segmentation record store

--- a/web_client/templates/layout/frontPage.pug
+++ b/web_client/templates/layout/frontPage.pug
@@ -8,13 +8,13 @@
   .page-container
     .main-cards-blocks.grid
       .card-block.about-card-block(target='view')
-        .cards-block-info.cards-block-title.main-subtitle View
+        .cards-block-info.cards-block-title.main-subtitle Data
         .cards-block-info.cards-block-descr Quickly go over your dataset and modify your label
-      .card-block.about-card-block(target='qc')
-        .cards-block-info.cards-block-title.main-subtitle Link
-        .cards-block-info.cards-block-descr Mapping your original images with their segmentations and manage data
+      //- .card-block.about-card-block(target='qc')
+      //-   .cards-block-info.cards-block-title.main-subtitle Link
+      //-   .cards-block-info.cards-block-descr Mapping your original images with their segmentations and manage data
       .card-block.about-card-block(target='analysis')
-        .cards-block-info.cards-block-title.main-subtitle Analysis(Coming)
+        .cards-block-info.cards-block-title.main-subtitle Apps
         .cards-block-info.cards-block-descr Throw your dataset in pipeline and Running tasks offline
       .card-block.about-card-block(target='history')
         .cards-block-info.cards-block-title.main-subtitle History(Coming)
