--- a/web_client/templates/layout/nav.pug
+++ b/web_client/templates/layout/nav.pug
@@ -1,10 +1,10 @@
 ul.nav.navbar-nav
   li
-    a#View View
+    a#View Data
+  //- li
+  //-   a#Link Link
   li
-    a#Link Link
-  li
-    a#Analysis Analysis
+    a#Analysis Apps
   li
     a#History History
 
