--- a/web_client/templates/layout/panelContentLayout.pug
+++ b/web_client/templates/layout/panelContentLayout.pug
@@ -2,7 +2,7 @@
 
 #s-full-page-body-View(style='display:none')
 
-#s-full-page-body-Link(style='display:none')
+//- #s-full-page-body-Link(style='display:none')
 
 #g-dialog-container.modal.fade(tabindex="-1")
 #s-full-page-body-Analysis(style='display:none')
