--- a/web_client/templates/layout/nav.pug
+++ b/web_client/templates/layout/nav.pug
@@ -1,10 +1,10 @@
 ul.nav.navbar-nav
   li
-    a#View Data
+    a#Data Data
   //- li
   //-   a#Link Link
   li
-    a#Analysis Apps
+    a#Apps Apps
   li
     a#History History
 
