--- a/web_client/stylesheets/layout/nav.styl
+++ b/web_client/stylesheets/layout/nav.styl
@@ -1,25 +1,25 @@
 #s-full-page-body-Welcome,
 #s-full-page-body-Link,
-#s-full-page-body-View,
-#s-full-page-body-Analysis,
+#s-full-page-body-Data,
+#s-full-page-body-Apps,
 #s-full-page-body-History
   top 52px
   position relative
 #Link,
-#View,
-#Analysis,
+#Data,
+#Apps,
 #History
   border-left 1px solid #f8f8f8
   border-right 1px solid #f8f8f8
   
 #Link.active,
-#View.active,
-#Analysis.active,
+#Data.active,
+#Apps.active,
 #History.active
   background-color gainsboro
   
 #Link:hover,
-#View:hover,
-#Analysis:hover,
+#Data:hover,
+#Apps:hover,
 #History:hover
   background-color gainsboro
