--- a/web_client/templates/layout/panelContentLayout.pug
+++ b/web_client/templates/layout/panelContentLayout.pug
@@ -1,10 +1,10 @@
 #s-full-page-body-Welcome(style='display:none')
 
-#s-full-page-body-View(style='display:none')
+#s-full-page-body-Data(style='display:none')
 
 //- #s-full-page-body-Link(style='display:none')
 
 #g-dialog-container.modal.fade(tabindex="-1")
-#s-full-page-body-Analysis(style='display:none')
+#s-full-page-body-Apps(style='display:none')
 
 #s-full-page-body-History(style='display:none')
