--- a/web_client/templates/layout/frontPage.pug
+++ b/web_client/templates/layout/frontPage.pug
@@ -7,13 +7,13 @@
 .page-main
   .page-container
     .main-cards-blocks.grid
-      .card-block.about-card-block(target='view')
+      .card-block.about-card-block(target='data')
         .cards-block-info.cards-block-title.main-subtitle Data
         .cards-block-info.cards-block-descr Quickly go over your dataset and modify your label
       //- .card-block.about-card-block(target='qc')
       //-   .cards-block-info.cards-block-title.main-subtitle Link
       //-   .cards-block-info.cards-block-descr Mapping your original images with their segmentations and manage data
-      .card-block.about-card-block(target='analysis')
+      .card-block.about-card-block(target='apps')
         .cards-block-info.cards-block-title.main-subtitle Apps
         .cards-block-info.cards-block-descr Throw your dataset in pipeline and Running tasks offline
       .card-block.about-card-block(target='history')
