--- a/web_client/templates/widgets/ImageName.pug
+++ b/web_client/templates/widgets/ImageName.pug
@@ -11,8 +11,8 @@ ul#currentImage.dropdown-menu(role='menu')
                     a #{name.get('name')}
     else if fromSaipArchive
         each name,index in allImagesName
-            li(id=name.id).dropdown-submenu.imageSelected
-                    a #{name.get('name')}
+            li(id=name.get('id')).dropdown-submenu.imageSelected
+                    a #{name.get('series_description')}
     else
         each name in allImagesName
             //- - console.log(name)
